CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(Thud)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11 -g")

FIND_PACKAGE(wxWidgets COMPONENTS core base gl REQUIRED)
FIND_PACKAGE(osg REQUIRED)
FIND_PACKAGE(osgViewer REQUIRED)
FIND_PACKAGE(osgDB REQUIRED)
FIND_PACKAGE(osgGA REQUIRED)
FIND_PACKAGE(OpenThreads REQUIRED)
FIND_PACKAGE(TinyXML2 REQUIRED)

INCLUDE(${wxWidgets_USE_FILE})
INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OSGVIEWER_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OSGDB_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OSGGA_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OPENTHREADS_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${TinyXML2_INCLUDE_DIR})

SET(HEADERS mainwindow.h gui.h app.hpp osgcanvas.hpp object.hpp scene.hpp physics.hpp)
SET(SOURCES mainwindow.cpp gui.cpp app.cpp osgcanvas.cpp object.cpp scene.cpp physics.cpp)

ADD_EXECUTABLE(${PROJECT_NAME}
  ${HEADERS}
  ${SOURCES}
  )

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${wxWidgets_LIBRARIES} ${OSGVIEWER_LIBRARIES} ${OSG_LIBRARIES} ${OSGGA_LIBRARIES} ${OSGDB_LIBRARIES} ${OPENTHREADS_LIBRARIES} ${TinyXML2_LIBRARIES})
